istio_config/istio/peeerauth.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: simple-app
spec:
  mtls:
    mode: DISABLE
